Añadiendo zoom effect en imágenes

--- a/views/services-partners.html
+++ b/views/services-partners.html
@@ -150,52 +150,68 @@
         <div class="row">
           <div class="col-12 col-lg-3">
             <div class="padding-function-rows">
-              <div class="row">
-                <div class="col-5">
-                  <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-1.jpg" alt="Redes"></a>
+              <div class="row flex">
+                <div class="col-5 flex">
+                  <div class="zoom-effect-container-clients">
+                    <div class="image-card">
+                      <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-1.jpg" alt="Redes"></a>
+                    </div>
+                  </div>
                 </div>
                 <div class="col-6">
                   <h4 class="center-align">Redes</h4>
-                  <p class="center-align">Control total de todo tipo de dispositivos de red sin importar modelo o tamaño.</p>
+                  <p class="center-align"  style="margin-bottom:0">Control total de todo tipo de dispositivos de red sin importar modelo o tamaño.</p>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-12 col-lg-3">
             <div class="padding-function-rows">
-              <div class="row">
-                <div class="col-5">
-                  <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-2.jpg" alt="Servidores"></a>
+              <div class="row flex">
+                <div class="col-5 flex">
+                  <div class="zoom-effect-container-clients">
+                    <div class="image-card">
+                      <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-2.jpg" alt="Servidores"></a>
+                    </div>
+                  </div>
                 </div>
                 <div class="col-6">
                   <h4 class="center-align">Servidores</h4>
-                  <p class="center-align">Planifique su capacidad y monitorice desde el hardware al sistema operativo.</p>
+                  <p class="center-align" style="margin-bottom:0">Planifique su capacidad y monitorice desde el hardware al sistema operativo.</p>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-12 col-lg-3">
             <div class="padding-function-rows">
-              <div class="row">
-                <div class="col-5">
-                  <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-3.jpg" alt="Aplicaciones"></a>
+              <div class="row flex">
+                <div class="col-5 flex">
+                  <div class="zoom-effect-container-clients">
+                    <div class="image-card">
+                      <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-3.jpg" alt="Aplicaciones"></a>
+                    </div>
+                  </div>
                 </div>
                 <div class="col-6">
                   <h4 class="center-align">Aplicaciones</h4>
-                  <p class="center-align">Plugins configurados para obtener métricas de rendimiento de las tecnologías estándar del mercado.</p>
+                  <p class="center-align" style="margin-bottom:0">Plugins configurados para obtener métricas de rendimiento de las tecnologías estándar del mercado.</p>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-12 col-lg-3">
             <div class="padding-function-rows">
-              <div class="row">
-                <div class="col-5">
-                  <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-4.jpg" alt="Experiencia"></a>
+              <div class="row flex">
+                <div class="col-5 flex">
+                  <div class="zoom-effect-container-clients">
+                    <div class="image-card">
+                      <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-4.jpg" alt="Experiencia"></a>
+                    </div>
+                  </div>
                 </div>
                 <div class="col-6">
                   <h4 class="center-align">Experiencia de usuario</h4>
-                  <p class="center-align">Realice pruebas transaccionales de sus aplicaciones web tal y como lo harían sus usuarios.</p>
+                  <p class="center-align" style="margin-bottom:0">Realice pruebas transaccionales de sus aplicaciones web tal y como lo harían sus usuarios.</p>
                 </div>
               </div>
             </div>
@@ -204,52 +220,68 @@
         <div class="row">
           <div class="col-12 col-lg-3 col-lg-3">
             <div class="padding-function-rows">
-              <div class="row">
-                <div class="col-5">
-                  <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-5.jpg" alt="Logs"></a>
+              <div class="row flex">
+                <div class="col-5 flex">
+                  <div class="zoom-effect-container-clients">
+                    <div class="image-card">
+                      <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-5.jpg" alt="Logs"></a>
+                    </div>
+                  </div>
                 </div>
                 <div class="col-6">
                   <h4 class="center-align">Logs</h4>
-                  <p class="center-align">Obtenga logs de SO y aplicación desde los agentes de monitorización.</p>
+                  <p class="center-align" style="margin-bottom:0">Obtenga logs de SO y aplicación desde los agentes de monitorización.</p>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-12 col-lg-3 col-lg-3">
             <div class="padding-function-rows">
-              <div class="row">
-                <div class="col-5">
-                  <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-6.jpg" alt="Cloud"></a>
+              <div class="row flex">
+                <div class="col-5 flex">
+                  <div class="zoom-effect-container-clients">
+                    <div class="image-card">
+                      <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-6.jpg" alt="Cloud"></a>
+                    </div>
+                  </div>
                 </div>
                 <div class="col-6">
                   <h4 class="center-align">Cloud</h4>
-                  <p class="center-align">Unifique la monitorización de todos sus entornos distribuidos en una única herramienta.</p>
+                  <p class="center-align" style="margin-bottom:0">Unifique la monitorización de todos sus entornos distribuidos en una única herramienta.</p>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-12 col-lg-3">
             <div class="padding-function-rows">
-              <div class="row">
-                <div class="col-5">
-                  <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-7.jpg" alt="SAP"></a>
+              <div class="row flex">
+                <div class="col-5 flex">
+                  <div class="zoom-effect-container-clients">
+                    <div class="image-card">
+                      <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-7.jpg" alt="SAP"></a>
+                    </div>
+                  </div>
                 </div>
                 <div class="col-6">
                   <h4 class="center-align">SAP</h4>
-                  <p class="center-align">Métricas específicas con nuestro plugin certificado por SAP para R3 y SAP Hana.</p>
+                  <p class="center-align" style="margin-bottom:0">Métricas específicas con nuestro plugin certificado por SAP para R3 y SAP Hana.</p>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-12 col-lg-3">
             <div class="padding-function-rows">
-              <div class="row">
-                <div class="col-5">
-                  <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-8.jpg" alt="Control"></a>
+              <div class="row flex">
+                <div class="col-5 flex">
+                  <div class="zoom-effect-container-clients">
+                    <div class="image-card">
+                      <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-8.jpg" alt="Control"></a>
+                    </div>
+                  </div>
                 </div>
                 <div class="col-6">
                   <h4 class="center-align">Control remoto</h4>
-                  <p class="center-align">Acceso remoto completo a sus servidores y estaciones de trabajo.</p>
+                  <p class="center-align" style="margin-bottom:0">Acceso remoto completo a sus servidores y estaciones de trabajo.</p>
                 </div>
               </div>
             </div>
@@ -273,6 +305,29 @@
         <div class="row">
           <div class="col-sm-12">
             <h5 class="center-align"> A continuación, te presentaremos algunos casos de éxito (....). Para más información, da click a cada imagen.</h5>
+          </div>
+        </div>
+        <div class="row flex">
+          <div class="col-12 col-md-4 col-xl-3 flex">
+            <div class="content-padding-image zoom-effect-container-clients">
+              <div class="image-card">
+                <a href="#"><img src="../assets/images/g4s.png" alt="Logo G4s" class="img-fluid"></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 col-xl-3 flex">
+            <div class="content-padding-image zoom-effect-container-clients">
+              <div class="image-card">
+                <a href="#"><img src="../assets/images/meta4.png" alt="Logo Meta4" class="img-fluid"></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 col-xl-3 flex">
+            <div class="content-padding-image zoom-effect-container-clients">
+              <div class="image-card">
+                <a href="#"><img src="../assets/images/tuenti.png" alt="Logo Tuenti" class="img-fluid"></a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
