--- a/views/services-partners.html
+++ b/views/services-partners.html
@@ -39,7 +39,7 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link blue" href="#"><strong>Nuestros servicios y socios</strong></a>
+              <a class="nav-link blue" href="#"><strong>Nuestros servicios y socio</strong></a>
             </li>
             <li class="nav-item">
               <a class="nav-link blue" href="#contact-us" id="contact-us-gs"><strong>Contáctenos</strong></a>
@@ -154,7 +154,7 @@
                 <div class="col-5 flex">
                   <div class="zoom-effect-container-clients">
                     <div class="image-card">
-                      <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-1.jpg" alt="Redes"></a>
+                      <a href="https://pandorafms.com/es/monitorizacion-de-red/" target="_blank"><img class="card-img-top img-fluid" src="../assets/images/icono-1.jpg" alt="Redes"></a>
                     </div>
                   </div>
                 </div>
@@ -171,7 +171,7 @@
                 <div class="col-5 flex">
                   <div class="zoom-effect-container-clients">
                     <div class="image-card">
-                      <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-2.jpg" alt="Servidores"></a>
+                      <a href="https://pandorafms.com/es/monitorizacion-de-servidores/" target="_blank"><img class="card-img-top img-fluid" src="../assets/images/icono-2.jpg" alt="Servidores"></a>
                     </div>
                   </div>
                 </div>
@@ -188,7 +188,7 @@
                 <div class="col-5 flex">
                   <div class="zoom-effect-container-clients">
                     <div class="image-card">
-                      <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-3.jpg" alt="Aplicaciones"></a>
+                      <a href="https://pandorafms.com/es/monitorizacion-de-aplicaciones/" target="_blank"><img class="card-img-top img-fluid" src="../assets/images/icono-3.jpg" alt="Aplicaciones"></a>
                     </div>
                   </div>
                 </div>
@@ -205,7 +205,7 @@
                 <div class="col-5 flex">
                   <div class="zoom-effect-container-clients">
                     <div class="image-card">
-                      <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-4.jpg" alt="Experiencia"></a>
+                      <a href="https://pandorafms.com/es/monitorizacion-de-experiencia-de-usuario/" target="_blank"><img class="card-img-top img-fluid" src="../assets/images/icono-4.jpg" alt="Experiencia"></a>
                     </div>
                   </div>
                 </div>
@@ -224,7 +224,7 @@
                 <div class="col-5 flex">
                   <div class="zoom-effect-container-clients">
                     <div class="image-card">
-                      <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-5.jpg" alt="Logs"></a>
+                      <a href="https://pandorafms.com/es/recoleccion-de-logs/" target="_blank"><img class="card-img-top img-fluid" src="../assets/images/icono-5.jpg" alt="Logs"></a>
                     </div>
                   </div>
                 </div>
@@ -241,7 +241,7 @@
                 <div class="col-5 flex">
                   <div class="zoom-effect-container-clients">
                     <div class="image-card">
-                      <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-6.jpg" alt="Cloud"></a>
+                      <a href="https://pandorafms.com/es/monitorizacion-de-entornos-virtuales/" target="_blank"><img class="card-img-top img-fluid" src="../assets/images/icono-6.jpg" alt="Cloud"></a>
                     </div>
                   </div>
                 </div>
@@ -258,13 +258,13 @@
                 <div class="col-5 flex">
                   <div class="zoom-effect-container-clients">
                     <div class="image-card">
-                      <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-7.jpg" alt="SAP"></a>
+                      <a href="https://pandorafms.com/es/monitorizacion-sap/" target="_blank"><img class="card-img-top img-fluid" src="../assets/images/icono-7.jpg" alt="SAP"></a>
                     </div>
                   </div>
                 </div>
                 <div class="col-6">
                   <h4 class="center-align">SAP</h4>
-                  <p class="center-align" style="margin-bottom:0">Métricas específicas con nuestro plugin certificado por SAP para R3 y SAP Hana.</p>
+                  <p class="center-align" style="margin-bottom:0">Métricas específicas con el plugin certificado por SAP para R3 y SAP Hana.</p>
                 </div>
               </div>
             </div>
@@ -275,7 +275,7 @@
                 <div class="col-5 flex">
                   <div class="zoom-effect-container-clients">
                     <div class="image-card">
-                      <a href="#"><img class="card-img-top img-fluid" src="../assets/images/icono-8.jpg" alt="Control"></a>
+                      <a href="https://pandorafms.com/es/control-remoto-de-servidores/" target="_blank"><img class="card-img-top img-fluid" src="../assets/images/icono-8.jpg" alt="Control"></a>
                     </div>
                   </div>
                 </div>
@@ -295,7 +295,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-sm-12">
-            <h1 class="center-align">Casos de éxito</h1>
+            <h1 class="center-align">Casos de éxito de Pandora FMS</h1>
             <hr class="hr-style-gib">
             <br>
           </div>
@@ -304,28 +304,28 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-sm-12">
-            <h5 class="center-align"> A continuación, te presentaremos algunos casos de éxito (....). Para más información, da click a cada imagen.</h5>
+            <h5 class="center-align"> A continuación, te presentaremos algunos casos de éxito con Pandora FMS. Para más información, click a cada logo.</h5>
           </div>
         </div>
         <div class="row flex">
-          <div class="col-12 col-md-4 col-xl-3 flex">
+          <div class="col-9 col-md-4 col-xl-3 flex">
             <div class="content-padding-image zoom-effect-container-clients">
               <div class="image-card">
-                <a href="#"><img src="../assets/images/g4s.png" alt="Logo G4s" class="img-fluid"></a>
+                <a href="https://pandorafms.com/downloads/G4S_hellas-ES.pdf" target="_blank"><img src="../assets/images/g4s.png" alt="Logo G4s" class="img-fluid"></a>
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-4 col-xl-3 flex">
+          <div class="col-9 col-md-4 col-xl-3 flex">
             <div class="content-padding-image zoom-effect-container-clients">
               <div class="image-card">
-                <a href="#"><img src="../assets/images/meta4.png" alt="Logo Meta4" class="img-fluid"></a>
+                <a href="https://pandorafms.com/downloads/meta4_ES.pdf" target="_blank"><img src="../assets/images/meta4.png" alt="Logo Meta4" class="img-fluid"></a>
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-4 col-xl-3 flex">
+          <div class="col-9 col-md-4 col-xl-3 flex">
             <div class="content-padding-image zoom-effect-container-clients">
               <div class="image-card">
-                <a href="#"><img src="../assets/images/tuenti.png" alt="Logo Tuenti" class="img-fluid"></a>
+                <a href="https://pandorafms.com/downloads/CASO-EXITO-TUENTI-ES.pdf" target="_blank"><img src="../assets/images/tuenti.png" alt="Logo Tuenti" class="img-fluid"></a>
               </div>
             </div>
           </div>
