--- a/views/services-partners.html
+++ b/views/services-partners.html
@@ -30,7 +30,7 @@
           <ul class="navbar-nav ml-auto  padding-top-header-ul content-box">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <strong>Sobre Gib-Solutions</strong>
+                <strong>Sobre nosotros</strong>
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item blue" href="#about-us" id="about-us-gs"><strong>¿Quiénes somos?</strong></a>
@@ -39,7 +39,7 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link blue" href="#"><strong>Nuestros servicios y socio</strong></a>
+              <a class="nav-link blue" href="#"><strong>Nuestros servicios y socios</strong></a>
             </li>
             <li class="nav-item">
               <a class="nav-link blue" href="#contact-us" id="contact-us-gs"><strong>Contáctenos</strong></a>
@@ -90,7 +90,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-sm-12">
-            <h1 class="center-align">Nuestro socio estratégico</h1>
+            <h1 class="center-align">Nuestros socios estratégicos</h1>
             <hr class="hr-style-gib">
             <br>
           </div>
